--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^6.16.2",
     "axios": "^1.5.1",
     "change-case": "^5.0.2",
     "dayjs": "^1.11.10",
