--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
     "@fontsource/public-sans": "^5.0.12",
+    "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "5.0.0-alpha.147",
@@ -38,6 +39,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4",
+    "yup": "^1.3.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
