--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.5.1",
     "change-case": "^5.0.2",
     "dayjs": "^1.11.10",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
