--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "photoswipe": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-photoswipe-gallery": "^2.2.7",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4",
