--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@goongmaps/goong-map-react": "^1.1.2",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
+    "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
