--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
     "photoswipe": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
