--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/x-date-pickers": "^6.16.2",
     "axios": "^1.6.2",
     "change-case": "^5.0.2",
+    "csv-parse": "^5.5.3",
     "dayjs": "^1.11.10",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
