--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@microsoft/signalr": "^8.0.0",
+    "@mui/base": "5.0.0-beta.30",
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/utils": "^5.15.3",
     "@mui/x-date-pickers": "^6.16.2",
+    "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
     "change-case": "^5.0.2",
     "csv-parse": "^5.5.3",
@@ -40,6 +43,7 @@
     "notistack": "^3.0.1",
     "photoswipe": "^5.4.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
